[package]
name = "tailcall-http-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tailcall = { path = "..", default-features = false }
anyhow = { workspace = true }
http-cache-reqwest = { version = "0.13.0", features = [
    "manager-moka",
], default-features = false, optional = true }
hyper = { version = "0.14.28", features = ["server"], default-features = false }
reqwest = { workspace = true }
reqwest-middleware = "0.2.5"
async-trait = "0.1.80"


[dev-dependencies]
