[package]
name = "tailcall-serde-schema"
version = "0.1.0"
edition = "2021"


[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_json_borrow = "0.3.0"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.0"

[[bench]]
name = "criterion"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
