[package]
name = "tailcall-serde-schema"
version = "0.1.0"
edition = "2021"


[dependencies]
fxhash = "0.2.1"
serde.workspace = true
serde_json = { workspace = true, features = ["alloc"] }
serde_json_borrow = "0.3.0"

[dev-dependencies]
criterion = "0.5.1"
insta.workspace = true
pretty_assertions = "1.4.0"
async-graphql.workspace = true


[[bench]]
name = "criterion"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
