[package]
name = "tailcall-upstream-grpc"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.28", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"
prost = "0.12.4"
prost-types = "0.12.4"
tower = "0.4.13"
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1.1"
anyhow = "1.0.82"
once_cell = "1.19.0"
tonic-tracing-opentelemetry = "0.19.0"
opentelemetry = { version = "0.23.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.23.0", features = ["trace", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry-http = "0.12.0"
opentelemetry-otlp = { version = "0.16.0", features = [
  "trace",
  # required to make grpc requests
  "tls-roots",
] }
tracing = "0.1.40"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.18"

[build-dependencies]
protoc-bin-vendored = "3.0.0"
tonic-build = "0.11.0"
tailcall-fixtures = { path = "../tailcall-fixtures" }
