[build-dependencies]
toml = "0.8.19"

[dependencies]
anyhow = "1.0.83"
async-graphql-value = "7.0.5"
async-std = "1.12.0"
async-trait = "0.1.80"
console_error_panic_hook = "0.1.7"
dashmap = "6.0.0"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-subscriber-wasm = "0.1.0"
url = "2.5.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[dependencies.hyper]
default-features = false
version = "0.14.28"

[dependencies.reqwest]
default-features = false
version = "0.11"

[dependencies.tailcall]
default-features = false
path = ".."

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "tailcall-wasm"
version = "0.1.0"
