[package]
name = "tailcall-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tailcall = { path = "..", default-features = false }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
anyhow = "1.0.83"
async-trait = "0.1.80"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.11", default-features = false }
async-std = "1.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-subscriber-wasm = "0.1.0"
hyper = { version = "0.14.28", default-features = false }
dashmap = "6.0.0"
async-graphql-value = "7.0.5"
serde_json = "1.0.117"
url = "2.5.0"
http = { workspace = true }
tailcall-valid = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
