[package]
name = "tc_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2", features = ["serde"] }
serde_yaml = "0.9"
num_cpus = "1.16.0"
prost-reflect = { version = "0.12.0", features = ["serde"] }
serde_path_to_error = "0.1.15"

async-graphql-value = "6.0.11"
cache_control = "0.2.0"
mimalloc = "0.1.39"
mini-v8 = { version = "0.4.1", optional = true }
exitcode = "1.1.2"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false }
http-cache-reqwest = { version = "0.12.0", features = ["manager-moka"], default-features = false}
colored = "2.1.0"
anyhow = "1.0.76"
tokio = {version = "1.35.1",features = ["rt","rt-multi-thread","fs"]}
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0.51"
derive_setters = "0.1.6"
log = "0.4.20"
resource = "0.5.0"
hyper = { version = "0.14", features = ["server"], default-features = false    }
webbrowser = { version = "0.8.12", features = ["hardened", "disable-wsl"] }
tc_core = {path = "../tc_core" }
regex = "1.10.2"
stripmargin = "0.1.1"
env_logger = "0.10.1"
async-graphql = { version = "6.0.11", features = [
    "dynamic-schema",
    "dataloader",
    "apollo_tracing"
] }

inquire = "0.6.2"
hyper-rustls = "0.24.2"
rustls = "0.21.9"
rustls-pemfile = "1.0.4"


[dev-dependencies]
pretty_assertions = "1.4.0"
httpmock = "0.6"

