[package]
name = "tc_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = [] }
log = { version = "0.4.20", features = [] }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls"
], default-features = false }
async-graphql = { version = "6.0.11", features = ["dynamic-schema", "dataloader", "apollo_tracing"] }
async-graphql-value = "6.0.11"
cache_control = "0.2.0"
async-trait = "0.1.75"
anyhow = "1.0.77"
derive_setters = "0.1.6"
url = { version = "2", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_urlencoded = "0.7.1"
thiserror = "1.0.51"
regex = "1.10.2"
nom = "7.1.3"
futures-channel = { version = "0.3.29" }
futures-timer = { version = "3.0.2" }
futures-util = { version = "0.3.29" }
ttl_cache = "0.5.1"
prettytable-rs = "^0.10"
protox = "0.5.1"
prost-reflect = { version = "0.12.0", features = ["serde"] }
prost = "0.12.3"
indexmap = "2.1"
once_cell = "1.19.0"
serde_path_to_error = "0.1.14"
lru = { version = "0.12.1" }
num_cpus = "1.16.0"
async-std = { version = "1.12.0",features = ["unstable","wasm-bindgen-futures"] }
tokio = { version = "1.35.1",features = ["rt","time"] }

http-cache-reqwest = { version = "0.12.0", features = ["manager-moka"], default-features = false, optional = true}
reqwest-middleware = { version = "0.2.4"}

[features]
default = ["http-cache-reqwest","tokio/fs"]

[dev-dependencies]
fnv = "1.0.7"
pretty_assertions = "1.4.0"
httpmock = "0.6"