[package]
name = "workers"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hyper = { version = "0.14", features = [], default-features = false }
tokio = "1"
worker = "0.0.18"
#reqwest = {version = "0.11.22", features = ["wasm-streams"]}
async-std = "1.12.0"
serde_json = "1.0.108"
tailcall = {path = "..", features = [], default-features = false}
lazy_static = { version = "1.4.0", features = [] }

anyhow = "1.0.75"
derive_setters = "0.1.6"
http = "1.0.0"

[dependencies.web-sys]
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]

[profile.release]
lto = true
strip = true
codegen-units = 1
