[package]
name = "workers"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
opt-level = "z"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hyper = { version = "0.14", default-features = false }
worker = "0.0.18"
tailcall = {path = "..", default-features = false}
lazy_static = { version = "1.4.0", features = [] }
lru = "0.12.1"
wasm-timer = "0.2.5"
[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 'z'
