[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.28", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"
tower = "0.4.13"
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1.0"
anyhow = "1.0.82"
once_cell = "1.19.0"
tonic-tracing-opentelemetry = "0.18.1"
opentelemetry = { version = "0.22.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.22.1", features = ["trace", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-http = "0.11.0"
opentelemetry-otlp = { version = "0.15.0", features = [
  "trace",
  # required to make grpc requests
  "tls-roots",
] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11.0"
