[package]
name = "extension-i18n"
version = "0.1.0"
edition = "2021"

[dependencies]
tailcall = { path = "../.." }
tracing = { workspace = true }
dotenvy = "0.15.7"
anyhow = { workspace = true }
tokio = { workspace = true }
async-graphql = { workspace = true }
async-graphql-value = "7.0.3"
futures = "0.3.30"

[dev-dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1.80"
hyper = { version = "0.14.28", default-features = false }